# TinkerRocket

./: .gitignore  .gitmodules  README.md  TODO.md  parse_flight.py
.github/workflows/: cpp-tests.yml  firmware-build.yml  ios-tests.yml  sim-tests.yml
BLE_MTU_Finder/: BLE_MTU_Finder.ino
BLE_MultiNotify_Test/: BLE_MultiNotify_Test.ino
Data_Analysis/: analyze_gaps.py  analyze_gaps_detailed.py  analyze_gaps_post_fix.py  analyze_gnss_staleness.py  analyze_launch_detection.py  analyze_nonsensor_detail.py  analyze_pyro_apogee.py  analyze_roll_pid.py  analyze_sensor_noise.py  analyze_timestamps.py  plot_flight_data_legacy.py  plot_flight_data_mini.py  replay_flight_ekf.py
TinkerRocket/TinkerRocket_BaseStation/: TinkerRocket_BaseStation.ino  config.h
TinkerRocketApp/: Info.plist  README.md
TinkerRocketApp/TinkerRocketApp/: TinkerRocketAppApp.swift
TinkerRocketApp/TinkerRocketApp.xcodeproj/: project.pbxproj
TinkerRocketApp/TinkerRocketAppTests/: AutoApplyRefusalTests.swift  MessageParserTests.swift  SensorConverterTests.swift  SensorTypesTests.swift  TelemetryDataTests.swift  TinkerRocketAppTests.swift
docs/plans/: 50-custom-nand-flight-log.md  README.md
hello_world/: hello_world.ino
libraries/RadioLib/: CMakeLists.txt
libraries/TR_BLE_To_APP/: TR_BLE_To_APP.cpp  TR_BLE_To_APP.h
libraries/TR_BMP585/: TR_BMP585.h  library.properties
libraries/TR_ControlMixer/: TR_ControlMixer.cpp  TR_ControlMixer.h  library.json  library.properties
libraries/TR_Coordinates/: TR_Coordinates.h  library.properties
libraries/TR_GNSSReceiverUBlox_Serial/: TR_GNSSReceiverUBlox_Serial.cpp  TR_GNSSReceiverUBlox_Serial.h  TR_SparkFun_u-blox_GNSS_v3.h  library.json  library.properties  sfe_bus.cpp  sfe_bus.h
libraries/TR_GpsInsEKF/: TR_GpsInsEKF.cpp  TR_GpsInsEKF.h  library.properties
libraries/TR_GuidancePN/: TR_GuidancePN.cpp  TR_GuidancePN.h
libraries/TR_I2C_Interface/: TR_I2C_Interface.cpp  TR_I2C_Interface.h  library.properties
libraries/TR_I2S_Stream/: TR_I2S_Stream.cpp  TR_I2S_Stream.h
libraries/TR_IMU_Int_V2/: TR_IMU_Int_V2.cpp  TR_IMU_Int_V2.h  library.properties
libraries/TR_INA230/: TR_INA230.cpp  TR_INA230.h  library.properties
libraries/TR_ISM6HG256/: TR_ISM6HG256.cpp  TR_ISM6HG256.h  ism6hg256x_reg.h  library.properties
libraries/TR_KinematicChecks/: TR_KinematicChecks.cpp  TR_KinematicChecks.h  library.json  library.properties
libraries/TR_LoRa_Comms/: TR_LoRa_Comms.cpp  TR_LoRa_Comms.h
libraries/TR_LogToFlash/: TR_LogToFlash.cpp  TR_LogToFlash.h  library.properties
libraries/TR_MMC5983MA/: TR_MMC5983MA.cpp  TR_MMC5983MA.h
libraries/TR_OUT_Page/: TR_OUT_Page.h
libraries/TR_PID/: TR_PID.cpp  TR_PID.h  library.json
libraries/TR_RocketComputerTypes/: RocketComputerTypes.h
libraries/TR_Sensor_Collector/: TR_Sensor_Collector.cpp  TR_Sensor_Collector.h
preflight/: run_preflight.py
tests/: INSTRUCTIONS.txt  analyze_bench.py  analyze_rates.py  parse_flight.py  plot_gaps.py  run_bench_tests.sh  trace_divergence.py  verify_sparse_ekf.py  verify_sparse_ekf_f32.py
tests/integration/: conftest.py  (+1 more)
tests_cpp/: CMakeLists.txt  test_control_mixer.cpp  test_coordinates.cpp  test_crc16_compat.cpp  test_ekf.cpp  test_guidance_pn.cpp  test_kinematic_checks.cpp  test_lora_roundtrip.cpp  test_pid.cpp  test_rocket_computer_types.cpp  test_sensor_data_converter.cpp  test_tr_flightlog_core.cpp  test_tr_flightlog_wire_format.cpp
tests_cpp/fakes/: fake_nand_backend.cpp  fake_nand_backend.h  memory_bitmap_store.h
tests_cpp/fixtures/ble_wire_format/: cmd2_list_3_files.json
tests_cpp/host_shim/: Arduino.h  compat.h  esp_log.h
tinkerrocket-idf/: .gitignore  TODO_I2C_MIGRATION.md
tinkerrocket-idf/components/TR_FlightLog/: BlockStateBitmap.cpp  CMakeLists.txt  FlightIndex.cpp  NvsBitmapStore.cpp  TR_FlightLog.cpp  TR_NandBackend_esp.cpp  WireFormat.cpp
tinkerrocket-idf/components/TR_FlightLog/include/: BlockStateBitmap.h  FlightIndex.h  NvsBitmapStore.h  TR_BitmapStore.h  TR_FlightLog.h  TR_FlightLog_types.h  TR_NandBackend.h  TR_NandBackend_esp.h  WireFormat.h
tinkerrocket-idf/components/TR_GuidancePN_Stub/: CMakeLists.txt  TR_GuidancePN.h
tinkerrocket-idf/projects/base_station/main/: CMakeLists.txt  config.h  main.cpp
tinkerrocket-idf/projects/flight_computer/main/: CMakeLists.txt  config.h  main.cpp
tinkerrocket-idf/projects/out_computer/main/: CMakeLists.txt  config.h  main.cpp
tinkerrocket-sim/: pyproject.toml  setup.py
tinkerrocket-sim/config/: launch_site.yaml  sim_config.yaml
tinkerrocket-sim/cpp/ekf/: ekf_bindings.cpp
tinkerrocket-sim/cpp/guidance/: guidance_bindings.cpp
tinkerrocket-sim/cpp/mixer/: mixer_bindings.cpp
tinkerrocket-sim/cpp/pid/: pid_bindings.cpp  pid_controller.h
tinkerrocket-sim/motors/: AeroTech_E30T.eng  AeroTech_F52C.eng  AeroTech_F67C.eng  AeroTech_G74W.eng  AeroTech_G80T.eng
tinkerrocket-sim/rockets/: 54mm_Roll_Control.ork  67mm Guidance Testbed.ork
tinkerrocket-sim/scripts/: debug_attitude_error.py  debug_ekf_heading.py  plot_ekf_vs_truth.py  run_closed_loop.py  run_passive_sim.py  setup_cfd_server.sh  sim_gui.py  test_6dof_plot.py  test_ekf_modes.py  test_imu_only.py
tinkerrocket-sim/src/tinkerrocket_sim/: __init__.py
tinkerrocket-sim/src/tinkerrocket_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tinkerrocket-sim/src/tinkerrocket_sim/control/: controller.py
tinkerrocket-sim/src/tinkerrocket_sim/physics/: aero.py  atmosphere.py  drag.py  sixdof.py
tinkerrocket-sim/src/tinkerrocket_sim/plotting/: flight_plots.py
tinkerrocket-sim/src/tinkerrocket_sim/rocket/: definition.py  fin_tab_aero.py  motor_db.py  ork_parser.py
tinkerrocket-sim/src/tinkerrocket_sim/sensors/: baro_model.py  gnss_model.py  imu_model.py  mag_model.py
tinkerrocket-sim/src/tinkerrocket_sim/simulation/: closed_loop_sim.py  rocketpy_passive.py
tinkerrocket-sim/src/tinkerrocket_sim/visualization/: __init__.py  flight_3d.py  flight_html.py  rocket_3d.py
tinkerrocket-sim/tests/: test_ekf_sim.py  test_guidance_pn.py  test_mixer.py  test_pid.py  test_sixdof.py
tools/: plot_attitude.py
(+263 files in other folders)
